# sl29.dog

./: LICENSE  README.md  README.rst  mes_chiens.py  pyproject.toml  setup.py
Terminale/TPs/Chien/: Chien.ipynb
doc/: index.rst
doc/source/: conf.py  index.rst  license.rst  sl29.dog.rst
src/sl29/dog/: Interactive-1.ipynb  __init__.py  dog.py
tests/: test_dog.py
